--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"graphql-tag": "^2.10.1",
 		"http-status-codes": "^1.3.0",
 		"jmespath": "^0.15.0",
+		"js-yaml": "^4.1.0",
 		"lodash-pickdeep": "^1.0.2",
 		"lodash.clonedeep": "^4.5.0",
 		"lodash.omit": "^4.5.0",
@@ -67,7 +68,7 @@
 		"@babel/polyfill": "^7.8.3",
 		"@babel/preset-env": "^7.8.4",
 		"@babel/register": "^7.8.3",
-		"babel-eslint": "^10.0.1",
+		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.0.5",
 		"chai": "^3.5.0",
 		"chai-fs": "^2.0.0",
